--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@tailwindcss/typography": "^0.5.16",
     "@types/lodash.kebabcase": "^4.1.9",
     "@typescript-eslint/parser": "^8.36.0",
+    "@vitest/ui": "^4.0.8",
     "eslint": "^9.30.1",
     "eslint-plugin-astro": "^1.3.1",
     "globals": "^16.3.0",
@@ -48,6 +49,7 @@
     "prettier-plugin-astro": "^0.14.1",
     "prettier-plugin-tailwindcss": "^0.6.13",
     "typescript": "^5.8.3",
-    "typescript-eslint": "^8.36.0"
+    "typescript-eslint": "^8.36.0",
+    "vitest": "^4.0.8"
   }
 }
