--- a/package.json
+++ b/package.json
@@ -16,7 +16,12 @@
     "astro": "astro",
     "format:check": "prettier --check .",
     "format": "prettier --write .",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "test": "playwright test",
+    "test:responsive": "playwright test tests/responsive/",
+    "test:ui": "playwright test --ui",
+    "test:report": "playwright show-report",
+    "test:debug": "playwright test --debug"
   },
   "dependencies": {
     "@astrojs/mdx": "^4.3.10",
@@ -36,6 +41,7 @@
   "devDependencies": {
     "@astrojs/check": "^0.9.4",
     "@pagefind/default-ui": "^1.3.0",
+    "@playwright/test": "^1.56.1",
     "@shikijs/transformers": "^3.7.0",
     "@tailwindcss/typography": "^0.5.16",
     "@types/lodash.kebabcase": "^4.1.9",
