--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "lint": "eslint .",
     "test": "playwright test",
     "test:responsive": "playwright test tests/responsive/",
+    "test:heading": "node tests/heading-hierarchy.test.mjs",
     "test:ui": "playwright test --ui",
     "test:report": "playwright show-report",
     "test:debug": "playwright test --debug"
@@ -49,7 +50,9 @@
     "@vitest/ui": "^4.0.8",
     "eslint": "^9.30.1",
     "eslint-plugin-astro": "^1.3.1",
+    "glob": "^11.0.3",
     "globals": "^16.3.0",
+    "jsdom": "^27.2.0",
     "pagefind": "^1.3.0",
     "prettier": "^3.6.2",
     "prettier-plugin-astro": "^0.14.1",
