--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "test:heading": "node tests/heading-hierarchy.test.mjs",
     "test:contrast": "node tests/color-contrast.test.mjs",
     "test:loads": "playwright test tests/page-loads.spec.ts",
+    "test:build": "node tests/build.test.mjs",
     "test:ui": "playwright test --ui",
     "test:report": "playwright show-report",
     "test:debug": "playwright test --debug"
