--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "format": "prettier --write .",
     "lint": "eslint .",
     "test": "playwright test",
+    "test:header": "playwright test tests/header.spec.ts",
     "test:responsive": "playwright test tests/responsive/",
     "test:keyboard": "playwright test tests/keyboard-navigation.spec.ts",
     "test:heading": "node tests/heading-hierarchy.test.mjs",
