Added buy links

--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "test:header": "playwright test tests/header.spec.ts",
     "test:footer": "playwright test tests/footer.spec.ts",
     "test:book-card": "playwright test tests/book-card.spec.ts",
+    "test:news-card": "playwright test tests/news-card.spec.ts",
+    "test:buy-links": "playwright test tests/buy-links.spec.ts",
     "test:responsive": "playwright test tests/responsive/",
     "test:keyboard": "playwright test tests/keyboard-navigation.spec.ts",
     "test:heading": "node tests/heading-hierarchy.test.mjs",
