Added icon improvements

--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "test:seo": "playwright test tests/seo.spec.ts",
     "test:typography": "playwright test tests/typography.spec.ts",
     "test:global-styles": "playwright test tests/global-styles.spec.ts",
+    "test:images": "playwright test tests/image-optimization.spec.ts",
+    "test:icons": "playwright test tests/icons.spec.ts",
     "test:responsive": "playwright test tests/responsive/",
     "test:keyboard": "playwright test tests/keyboard-navigation.spec.ts",
     "test:heading": "node tests/heading-hierarchy.test.mjs",
