Updated dark mode specs

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "test:global-styles": "playwright test tests/global-styles.spec.ts",
     "test:images": "playwright test tests/image-optimization.spec.ts",
     "test:icons": "playwright test tests/icons.spec.ts",
+    "test:dark-mode": "playwright test tests/dark-mode.spec.ts",
     "test:responsive": "playwright test tests/responsive/",
     "test:keyboard": "playwright test tests/keyboard-navigation.spec.ts",
     "test:heading": "node tests/heading-hierarchy.test.mjs",
