Added performance stuff

--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "format:check": "prettier --check .",
     "format": "prettier --write .",
     "lint": "eslint .",
+    "lighthouse": "lhci autorun",
+    "lighthouse:collect": "lhci collect",
+    "lighthouse:assert": "lhci assert",
     "test": "playwright test",
     "test:header": "playwright test tests/header.spec.ts",
     "test:footer": "playwright test tests/footer.spec.ts",
@@ -38,7 +41,8 @@
     "test:build": "node tests/build.test.mjs",
     "test:ui": "playwright test --ui",
     "test:report": "playwright show-report",
-    "test:debug": "playwright test --debug"
+    "test:debug": "playwright test --debug",
+    "test:performance": "node tests/performance.test.mjs"
   },
   "dependencies": {
     "@astrojs/mdx": "^4.3.10",
@@ -57,6 +61,7 @@
   },
   "devDependencies": {
     "@astrojs/check": "^0.9.4",
+    "@lhci/cli": "^0.15.1",
     "@pagefind/default-ui": "^1.3.0",
     "@playwright/test": "^1.56.1",
     "@shikijs/transformers": "^3.7.0",
@@ -73,6 +78,7 @@
     "prettier": "^3.6.2",
     "prettier-plugin-astro": "^0.14.1",
     "prettier-plugin-tailwindcss": "^0.6.13",
+    "rollup-plugin-visualizer": "^6.0.5",
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.36.0",
     "vitest": "^4.0.8"
