Tested XML sitemap

--- a/package.json
+++ b/package.json
@@ -40,6 +40,8 @@
     "test:themes": "node tests/color-contrast-validator.mjs",
     "test:loads": "playwright test tests/page-loads.spec.ts",
     "test:build": "node tests/build.test.mjs",
+    "test:validation": "playwright test tests/validation.spec.ts",
+    "test:sitemap": "playwright test tests/sitemap.spec.ts",
     "test:ui": "playwright test --ui",
     "test:report": "playwright show-report",
     "test:debug": "playwright test --debug",
@@ -72,6 +74,7 @@
     "@vitest/ui": "^4.0.8",
     "eslint": "^9.30.1",
     "eslint-plugin-astro": "^1.3.1",
+    "fast-xml-parser": "^5.3.2",
     "glob": "^11.0.3",
     "globals": "^16.3.0",
     "jsdom": "^27.2.0",
