--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "test:validation": "playwright test tests/validation.spec.ts",
     "test:sitemap": "playwright test tests/sitemap.spec.ts",
     "test:robots": "playwright test tests/robots.spec.ts",
+    "test:rss": "playwright test tests/rss.spec.ts",
     "test:ui": "playwright test --ui",
     "test:report": "playwright show-report",
     "test:debug": "playwright test --debug",
