--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "test:robots": "playwright test tests/robots.spec.ts",
     "test:rss": "playwright test tests/rss.spec.ts",
     "test:twitter-cards": "playwright test tests/twitter-cards.spec.ts",
+    "test:structured-data": "playwright test tests/structured-data.spec.ts",
     "test:ui": "playwright test --ui",
     "test:report": "playwright show-report",
     "test:debug": "playwright test --debug",
