--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "test:rss": "playwright test tests/rss.spec.ts",
     "test:twitter-cards": "playwright test tests/twitter-cards.spec.ts",
     "test:structured-data": "playwright test tests/structured-data.spec.ts",
+    "test:css-purge": "playwright test tests/css-purge.spec.ts",
     "test:ui": "playwright test --ui",
     "test:report": "playwright show-report",
     "test:debug": "playwright test --debug",
