Removed unused AstroPaper styles

--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "test:twitter-cards": "playwright test tests/twitter-cards.spec.ts",
     "test:structured-data": "playwright test tests/structured-data.spec.ts",
     "test:css-purge": "playwright test tests/css-purge.spec.ts",
+    "test:css-cleanup": "playwright test tests/css-cleanup.spec.ts",
     "test:ui": "playwright test --ui",
     "test:report": "playwright show-report",
     "test:debug": "playwright test --debug",
