--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "test:css-cleanup": "playwright test tests/css-cleanup.spec.ts",
     "test:css-coverage": "playwright test tests/css-coverage.spec.ts --project=desktop",
     "test:javascript": "playwright test tests/javascript-optimization.spec.ts",
+    "test:build-optimization": "playwright test tests/build-optimization.spec.ts --project=desktop",
     "test:ui": "playwright test --ui",
     "test:report": "playwright show-report",
     "test:debug": "playwright test --debug",
