--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "test:css-coverage": "playwright test tests/css-coverage.spec.ts --project=desktop",
     "test:javascript": "playwright test tests/javascript-optimization.spec.ts",
     "test:build-optimization": "playwright test tests/build-optimization.spec.ts --project=desktop",
+    "test:lcp": "playwright test tests/lcp-optimization.spec.ts",
     "test:ui": "playwright test --ui",
     "test:report": "playwright show-report",
     "test:debug": "playwright test --debug",
